# SS_2025_SWE

./: .pdm-python  README.md  leistungstest.py  main.py  pferd.py  pyproject.toml  simulate_data.py
