[project]
name = "SS_2025_SWE"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Olivia Kiechl", email = "ko8973@mci4me.at"},
]
dependencies = ["numpy>=2.2.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
